First-Follow-y-Justificacion-Gramatical.txt



 ANÁLISIS LL(1) — Conjuntos FIRST y FOLLOW
 SecureAccessLang — Teoría de la Computación — FACENA UNNE 2026

Justificación Gramatical y utilización de Gramática tipo LL(1):

Nuestro Analizador Sintáctico es de tipo Parser LL(1): lee la entrada de izquierda a derecha
y decide qué regla aplicar mirando UN solo token a la vez, sin volver
atrás. Para demostrar que esto es posible sin ambigüedad, calculamos
dos conjuntos para cada regla de la gramática:

  FIRST(A)  = con qué tokens/palabras puede COMENZAR esa regla.
  FOLLOW(A) = qué tokens pueden aparecer DESPUÉS de esa regla en cualquier sentencia válida.

Una gramática es LL(1) si, para cada regla que tiene más de una
alternativa, los FIRST de esas alternativas no se superponen.
Si alguna alternativa puede ser vacía (ε), además su FIRST no debe
superponerse con su FOLLOW.

Nota Aclaración: La tabla predictiva la añadimos al repositorio
 en formato excel, ya que por su tamaño no era posible agregarla 
 en este archivo y que sea fácil de leer.

CONJUNTOS FIRST
───────────────

  <programa>          →  { rol, usuario, login, logout, mfa, permitir, denegar }
  <lista_sentencias>  →  { rol, usuario, login, logout, mfa, permitir, denegar }
  <sentencia>         →  { rol, usuario, login, logout, mfa, permitir, denegar }
  <def_rol>           →  { rol }
  <def_usuario>       →  { usuario }
  <login>             →  { login }
  <logout>            →  { logout }
  <mfa>               →  { mfa }
  <permiso>           →  { permitir, denegar }
  <efecto>            →  { permitir, denegar }
  <estado_mfa>        →  { activar, desactivar }
  <accion>            →  { ID cuyo valor ∈ {leer, escribir, eliminar, acceder, ejecutar} }
  <recurso>           →  { ID cuyo valor ∈ {dashboard, usuarios, reportes, configuracion, ...} }
  <identificador>     →  { ID que comienza con letra o _ }
  <password>          →  { ID (cualquier token ID emitido por el lexer) }
  <resto_id>          →  { letra, dígito, ε }


CONJUNTOS FOLLOW
────────────────

  <programa>          →  { $ }           ($ = fin de entrada)
  <lista_sentencias>  →  { $ }
  <sentencia>         →  { rol, usuario, login, logout, mfa, permitir, denegar, $ }
  <def_rol>           →  igual que FOLLOW(<sentencia>)
  <def_usuario>       →  igual que FOLLOW(<sentencia>)
  <login>             →  igual que FOLLOW(<sentencia>)
  <logout>            →  igual que FOLLOW(<sentencia>)
  <mfa>               →  igual que FOLLOW(<sentencia>)
  <permiso>           →  igual que FOLLOW(<sentencia>)
  <efecto>            →  FIRST(<identificador>)  = { ID con letra/_ }
  <estado_mfa>        →  igual que FOLLOW(<sentencia>)
  <accion>            →  FIRST(<recurso>)
  <recurso>           →  igual que FOLLOW(<sentencia>)
  <identificador>     →  varía según dónde aparece (ver usos abajo)
  <password>          →  igual que FOLLOW(<sentencia>)
  <resto_id>          →  igual que FOLLOW(<identificador>)


VERIFICACIÓN LL(1): Ver si hay conflitctos.
──────────────────────────────────────

  <sentencia> tiene 6 alternativas. Sus FIRST son:
    def_rol     → { rol }
    def_usuario → { usuario }
    login       → { login }
    logout      → { logout }
    mfa         → { mfa }
    permiso     → { permitir, denegar }
  → Todos disjuntos. SIN CONFLICTO. 

  <efecto> tiene 2 alternativas:
    "permitir" → { permitir }
    "denegar"  → { denegar }
  → Disjuntos. SIN CONFLICTO. 

  <estado_mfa> tiene 2 alternativas:
    "activar"     → { activar }
    "desactivar"  → { desactivar }
  → Disjuntos. SIN CONFLICTO. 

  <identificador> (producción corregida):
    → <letra> <resto_id>   con FIRST = { letra/_ }
    → <resto_id> puede ser ε, pero su FOLLOW no se superpone
      con ningún FIRST de otra alternativa.
  → SIN CONFLICTO. 

  CONCLUSIÓN: la gramática es LL(1). El parser puede tomar
  siempre la decisión correcta mirando un solo token. 


NOTA SOBRE LA CORRECCIÓN DE <identificador>
────────────────────────────────────────────
La gramática original tenía:

    <identificador> → <letra>
                    | <letra> <identificador>
                    | <letra> <digito> <identificador>

Las tres alternativas comparten FIRST = { letra }, lo que genera
conflicto LL(1): con un solo token no se puede saber cuál aplicar.
Además la recursión no tiene parada explícita, lo que puede generar
cadenas vacías implícitas.

La producción corregida es:

    <identificador> → <letra> <resto_id>
    <resto_id>      → <letra>  <resto_id>
                    | <digito> <resto_id>
                    | ε

Ahora FIRST(<letra> <resto_id>) = { letra } y el ε queda acotado
a <resto_id> con FOLLOW bien definido. Gramática LL(1) sin ambigüedad.
